trying to fix bug on mobile, whitespace on right side

--- a/style.css
+++ b/style.css
@@ -285,3 +285,9 @@ footer {
     max-width: 100%;
   }
 }
+
+* {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
